# cppboilerplate

./: .clang-format  .gdbinit  .syntastic_clang_check_config  .syntastic_clang_config  Makefile  Makefile.defs  env-setup.sh  raii_socket.cpp  raii_socket.h
src/: CMakeLists.txt  Makefile.defs  README.md  main.cpp
src/raii_socket/: CMakeLists.txt
src/raii_socket/test/: Makefile  raii_socket_test.cpp
test/: Makefile
